--- a/notebooks/prediction.ipynb
+++ b/notebooks/prediction.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\96653\\Music\\bank-churn-predictor\\venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import load_model\n",
@@ -28,26 +19,25 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Users\\96653\\Music\\bank-churn-predictor\\venv\\Lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
-      "\n"
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
      ]
     }
    ],
    "source": [
     "### Load the trained model, scaler pickle,onehot\n",
-    "model=load_model('model.h5')\n",
+    "model=load_model('models/model.h5')\n",
     "\n",
     "## load the encoder and scaler\n",
-    "with open('onehot_encoder_geo.pkl','rb') as file:\n",
+    "with open('models/preprocessors/onehot_encoder_geo.pkl','rb') as file:\n",
     "    label_encoder_geo=pickle.load(file)\n",
     "\n",
-    "with open('label_encoder_gender.pkl', 'rb') as file:\n",
+    "with open('models/preprocessors/label_encoder_gender.pkl', 'rb') as file:\n",
     "    label_encoder_gender = pickle.load(file)\n",
     "\n",
-    "with open('scaler.pkl', 'rb') as file:\n",
+    "with open('models/preprocessors/scaler.pkl', 'rb') as file:\n",
     "    scaler = pickle.load(file)"
    ]
   },
@@ -403,13 +393,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 240ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 193ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.05577059]], dtype=float32)"
+       "array([[0.05047852]], dtype=float32)"
       ]
      },
      "execution_count": 9,
@@ -441,7 +431,7 @@
     {
      "data": {
       "text/plain": [
-       "0.055770587"
+       "0.05047852"
       ]
      },
      "execution_count": 11,
